<resources>
    <string name="app_name">Hey master</string>

    <string name="first_intro_title">Give your home a makeover</string>
    <string name="first_intro_body">The best services that you could find for your home as we have everything that you are in need</string>
    <string name="second_intro_title">Qualified professionals</string>
    <string name="second_intro_body">Search from a list of Qualified professionals around you as we bring the best ones for you</string>
    <string name="third_intro_title">East &amp; Fast services</string>
    <string name="third_intro_body">Book your services at your convenient time and enjoy the hassle free process</string>
    <string name="verification_code_submit">Submit</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_account">Please Login to your account!</string>
    <string name="enter_mobile_number">Enter mobile phone</string>
    <string name="verificationOTP">OTP Verification</string>
    <string name="verificationSendOTP">We have sent OTP to your mobile number</string>
    <string name="verificationReceiveOTP">Didn\'t receive Code?</string>
    <string name="verificationResend">Resend</string>
    <string name="sign_up">Sign up</string>
    <string name="USupClient">Client</string>
    <string name="USupMaster">Master</string>
    <string name="fullName">Fullname</string>
    <string name="location">Location</string>
    <string name="profession">Profession</string>
    <string name="professions">Professions</string>
    <string name="salary">Salary</string>
    <string name="search">Search</string>
    <string name="plumber">Plumber</string>
    <string name="search_for_services">Search for a profession</string>
    <string name="search_for_profession">Search for a profession</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="servicePopular">Popular Professions</string>
    <string name="bookings">Bookings</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="inProgress">In Progress</string>
    <string name="finished">Finished</string>
    <string name="profile">Profile</string>
    <string name="loginAsMaster">Login as master</string>
    <string name="loginAsUser">Login as client</string>
    <string name="notifications">Notifications</string>
    <string name="languageChange">Change language</string>
    <string name="aboutUs">About us</string>
    <string name="help">Help</string>
    <string name="logOut">Log out</string>
    <string name="portfolio">Portfolio</string>
    <string name="suggestion">Suggestions</string>
    <string name="messages">Messages</string>
    <string name="heyMaster">Hey Master</string>
    <string name="skills">Skills</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="busy">Busy</string>
    <string name="free">Free</string>
    <string name="bookingNow">Booking now</string>
    <string name="serviceHome">Home services</string>
    <string name="completed">Completed</string>
    <string name="bookingAgain">Booking again</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate this service</string>
    <string name="description">Description</string>
    <string name="comment">The people working here are just so nice and helpful and make you feel so comfortable!</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="name">Will Smith</string>
    <string name="login_continue_button">Continue</string>
    <string name="popular_masters">Popular Masters</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_gender_male">0</string>
    <string name="str_gender_female">1</string>
    <string name="get_started">Get Started</string>
    <string name="masters_total_mark"> %s reviews</string>
    <string name="login_as_client">Login as Client</string>
    <string name="login_as_master">Login as Master</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="direction">Direction</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <string name="notification_channel_id" translatable="false">com.heymaster.heymaster</string>
    <string name="check_connection">Check Connection</string>
    <string name="choose_gender">Choose_gender</string>
    <string name="rate_this_service">Rate this service</string>
    <string name="rate_description">Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="enter_description">Enter description</string>
    <string name="search_for_master">Search for a master</string>
    <string name="save">Save</string>
    <string name="finish">Yakunlash</string>
    <string name="thanks">No, Thanks</string>
    <string name="sure">Yes, Sure</string>

</resources>