<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.auth.fragment.login.VerificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verificationOTP"
            android:textColor="@color/black1"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verificationSendOTP"
            android:textColor="@color/grey1"
            android:layout_marginHorizontal="48dp"
            android:scrollbarSize="22sp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.chaos.view.PinView
                android:id="@+id/et_verification_code"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="number"
                android:textSize="24sp"
                app:cursorWidth="2dp"
                android:itemBackground="@drawable/bg_edit_text_verification"
                app:itemCount="4"
                app:itemHeight="56dp"
                app:itemRadius="8dp"
                app:itemSpacing="8dp"
                app:itemWidth="56dp"
                app:lineWidth="1.5dp"
                app:lineColor="@drawable/selector_verification"
                app:viewType="rectangle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/verificationReceiveOTP"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginHorizontal="8dp"/>
            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/verificationResend"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/orange1"
                android:textStyle="bold"
                android:layout_marginHorizontal="8dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/verification_code_submit"
            app:cornerRadius="28dp" />


    </LinearLayout>







</LinearLayout>