<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:backgroundTint="#FAFAFA"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_peekHeight="250dp"
    android:background="@drawable/bg_bottom_navigation"
    app:behavior_hideable = "true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="8dp"
                android:text="@string/rate_this_service"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp">

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srb_drawableEmpty="@drawable/ic_star_unselected"
                app:srb_drawableFilled="@drawable/ic_star_selected"
                app:srb_numStars="5"
                app:srb_starHeight="35dp"
                app:srb_starPadding="3dp"
                app:srb_starWidth="35dp"
                app:srb_stepSize="1" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/cash_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="8dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:padding="12sp"
                android:text="@string/rate_description"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/bg_add_image_portfolio"
            android:padding="8dp">


            <EditText
                android:id="@+id/et_feedback"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:background="@null"
                android:hint="@string/enter_description"
                android:gravity="start"
                android:textSize="17sp"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/cancel"
                app:cornerRadius="24dp"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:backgroundTint="#E63838"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/submit"
                app:cornerRadius="24dp"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/black1"/>

        </LinearLayout>


    </LinearLayout>




</LinearLayout>