<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.fragment.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.nitish.typewriterview.TypeWriterView
                android:id="@+id/loginWritableTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_welcome"
                android:textColor="@color/black1"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginVertical="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_account"
                android:textColor="@color/grey1"
                android:textSize="22sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:mask="## ### ## ##"
                android:background="@drawable/bg_edit_text_login"
                android:drawableStart="@drawable/ic_998"
                android:drawablePadding="12dp"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="0dp"
                android:textColor="@color/black1"
                android:textCursorDrawable="@drawable/edittext_cursor_drawable"
                android:textSize="18sp"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="56dp"

                android:layout_marginHorizontal="24dp"
                android:text="@string/login_continue_button"
                app:cornerRadius="28dp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_welcome"
            android:textColor="@color/black1"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_account"
            android:textColor="@color/grey1"
            android:textSize="22sp" />


    </LinearLayout>

    <include
        android:id="@+id/progress_home"
        layout="@layout/custom_progress"
        android:visibility="gone"/>




</FrameLayout>