<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.fragment.login.ConfirmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:text="@string/verificationOTP"
            android:textColor="@color/black1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:gravity="center"
            android:scrollbarSize="22sp"
            android:text="@string/verificationSendOTP"
            android:textColor="@color/grey1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.chaos.view.PinView
                android:id="@+id/et_verification_code"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="@drawable/bg_edit_text_verification"
                android:textSize="24sp"
                app:cursorWidth="2dp"
                app:itemCount="4"
                app:itemHeight="56dp"
                app:itemRadius="8dp"
                app:itemSpacing="8dp"
                app:itemWidth="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lineColor="@drawable/selector_verification"
                app:lineWidth="1.5dp"
                app:viewType="rectangle" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:59"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_verification_code"
                android:textSize="16sp"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24sp">

            <TextView
                android:id="@+id/tv_didnt_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/verificationReceiveOTP"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/verificationResend"
                android:textColor="@color/orange1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/btn_submit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginHorizontal="24dp"-->
<!--            android:text="@string/verification_code_submit"-->
<!--            app:cornerRadius="28dp" />-->


    </LinearLayout>


</LinearLayout>