<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="16dp"
    android:layout_marginHorizontal="16dp"
    app:cardElevation="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inProgress"
                android:textColor="@color/orange1"
                android:textSize="12sp"/>

        </LinearLayout>
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/im_profilePhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/intro_image_2"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:shapeAppearanceOverlay="@style/radius"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_nameWorker"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_dateBooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="23.05.2022"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="normal"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_phoneNumber"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+998 99 046 6901"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ignore"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ignore"
                android:textColor="@color/orange1"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_accept"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textColor="@color/green1"
                android:textSize="12sp"/>


        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>